# ompss-maxeler

./: README.md
gemm/: Makefile  buildDFE.sh  exec-max.sh  exec.sh  mm_test_max.c  mm_test_panels.c  mm_test_panels_nodep.c
gemm/cpu_src/: README.md
gemm/src/gemm/: GemmEngineParameters.maxj  GemmManager.maxj  GemmManagerMax5.maxj
mcxx/: Makefile.in  aclocal.m4  config.h.in  configure
mcxx/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
mcxx/config/: template.50.config.omp.fpga
mcxx/doc/: Makefile.in
mcxx/src/driver/: cxx-configfile.c  cxx-configfile.h  cxx-configoptions.gperf  cxx-driver-build-info.h.in  cxx-driver-decls.h  cxx-driver-utils.c  cxx-driver.c
mcxx/src/frontend/: cxx-nodecl.def
mcxx/src/tl/analysis/pcfg/: tl-pcfg-visitor.hpp
mcxx/src/tl/omp/base/: tl-omp-base.cpp  tl-omp-base.hpp  tl-ompss-base-task.cpp
mcxx/src/tl/omp/core/: tl-omp-core.cpp  tl-omp-core.hpp  tl-ompss-core.cpp  tl-ompss-target.cpp  tl-ompss-target.hpp  tl-ompss.cpp  tl-ompss.hpp
mcxx/src/tl/omp/nanox-nodecl/: tl-devices.cpp  tl-devices.hpp  tl-lower-task-call.cpp  tl-lower-task-common.hpp  tl-lower-task.cpp  tl-lowering-visitor.hpp  tl-nanox-nodecl.cpp  tl-nanox-nodecl.hpp  tl-outline-info.cpp  tl-outline-info.hpp  tl-target-information.hpp
mcxx/src/tl/omp/nanox-nodecl/devices/fpga/: nanox-fpga-utils.hpp  nanox-fpga.cpp  nanox-fpga.hpp
mcxx/src/tl/omp/nanox-nodecl/devices/smp/: nanox-smp.cpp  nanox-smp.hpp
mcxx/tests/: Makefile.in
mcxx/tests/config/: Makefile.in
nanox-mx/: Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  ltmain.sh  nanox-config.h.in
nanox-mx/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
nanox-mx/doc/: Makefile.in  paraver_configs.mk
nanox-mx/doc/paraver_configs/cluster/: cluster_finish_wd.cfg  cluster_remote_node_select.cfg  cluster_remote_node_task.cfg  cluster_wd_offload.cfg
nanox-mx/doc/paraver_configs/ompss/fpga/: handling_fpga_created_tasks.cfg  number_tasks_in_acc.cfg  smp_and_fpga_tasks.cfg
nanox-mx/m4/: ax_build_versions.m4  ax_check_extrae.m4  ax_check_gasnet.m4  ax_check_maxeler.m4  ax_check_xtasks.m4
nanox-mx/scripts/: Makefile.in
nanox-mx/src/: Makefile.in  common.am
nanox-mx/src/apis/: Makefile.in
nanox-mx/src/apis/c/: nanos.h  nanos_instrument.cpp  nanos_pe.cpp  nanos_version.def  nanos_wd.cpp
nanox-mx/src/arch/: Makefile.am  Makefile.in
nanox-mx/src/arch/cluster/: Makefile.am  Makefile.in  clusterconfig.cpp  clusterconfig.hpp  clustermpiplugin.cpp  clustermpiplugin_decl.hpp  clusternode.cpp  clusternode_decl.hpp  clusterplugin.cpp  clusterplugin_decl.hpp  clusterthread.cpp  clusterthread_decl.hpp  gasnetapi.cpp  gasnetapi_decl.hpp  netwd.cpp  netwd_decl.hpp
nanox-mx/src/arch/fpga/: Makefile.am  Makefile.in  fpga-api.cpp  fpgaconfig.cpp  fpgaconfig.hpp  fpgadd.cpp  fpgadd.hpp  fpgadevice.cpp  fpgadevice.hpp  fpgadevice_fwd.hpp  fpgainstrumentation.cpp  fpgainstrumentation.hpp  fpgalistener.cpp  fpgalistener.hpp  fpgapinnedallocator.cpp  fpgapinnedallocator.hpp  fpgaplugin.cpp  fpgaprocessor.cpp  fpgaprocessor.hpp  fpgaprocessorinfo.hpp  fpgathread.cpp  fpgathread.hpp  fpgawd.cpp  fpgawd_decl.hpp  fpgaworker.cpp  fpgaworker.hpp  libxtasks_wrapper.hpp  nanos-fpga.h
nanox-mx/src/arch/gpu/: Makefile.in  gpu-api.cpp  gpumemorytransfer.cpp  gpumemorytransfer.hpp  gpumemorytransfer_decl.hpp  gpuprocessor.hpp  gpuprocessor_decl.hpp  gputhread.cpp  gputhread_decl.hpp  nanos-gpu.h
nanox-mx/src/arch/maxeler/: Makefile.am  Makefile.in  __Makefile.am  max-api.cpp  maxconfig.cpp  maxconfig.hpp  maxdd.cpp  maxdd.hpp  maxdevice.cpp  maxdevice.hpp  maxplugin-orig.cpp  maxprocessor.cpp  maxprocessor.hpp  maxprocessorinfo.hpp  maxthread.cpp  maxthread.hpp  maxworker-orig.cpp  maxworker-orig.hpp  nanos-max.h
nanox-mx/src/arch/mpi/: Makefile.in  mpi-api.cpp  mpiplugin.cpp  mpiprocessor.cpp  mpiprocessor.hpp  mpiprocessor_decl.hpp  mpithread.cpp  mpithread.hpp  nanos-mpi.h
nanox-mx/src/arch/opencl/: Makefile.in  nanos-opencl.h  opencl-api.cpp  openclprocessor.cpp  openclprocessor_decl.hpp  openclthread.cpp  openclthread_decl.hpp
nanox-mx/src/arch/smp/: Makefile.in  smpdevice.hpp  smpdevice_decl.hpp  smpplugin.cpp  smpplugin_decl.hpp  smpprocessor.cpp  smpprocessor.hpp  smpthread.cpp  smpthread.hpp  smptransferqueue.hpp  smptransferqueue_decl.hpp
nanox-mx/src/arch/spu/: Makefile.in  spuprocessor.hpp  sputhread.cpp  sputhread.hpp
nanox-mx/src/arch/unix-os/: Makefile.in
nanox-mx/src/core/: Makefile.am  Makefile.in  addressspace.cpp  addressspace.hpp  addressspace_decl.hpp  asyncthread.cpp  asyncthread.hpp  asyncthread_decl.hpp  basethread.cpp  basethread.hpp  basethread_decl.hpp  eventdispatcher.cpp  eventdispatcher_decl.hpp  instrumentation.cpp  instrumentation.hpp  instrumentation_decl.hpp  instrumentationmodule_decl.hpp  memcachecopy.cpp  memcachecopy.hpp  memcontroller.cpp  memcontroller_decl.hpp  nanos-int.h  network.cpp  network_decl.hpp  processingelement.cpp  processingelement_decl.hpp  regioncache.cpp  regioncache_decl.hpp  regiondict.hpp  regiondict_decl.hpp  regiondirectory.cpp  regiondirectory_decl.hpp  schedule.cpp  schedule_decl.hpp  schedule_fwd.hpp  schedulerhelper_decl.hpp  system-orig.cpp  system.hpp  system_decl.hpp  throttle_decl.hpp  (+5 more)
nanox-mx/src/plugins/: Makefile.am  Makefile.in
nanox-mx/src/plugins/instrumentation/: extrae.cpp  ompt.cpp
nanox-mx/src/plugins/instrumentation/ompt-headers/: ompt-api.h  ompt-types.h
nanox-mx/src/plugins/sched/: affinity_sched.cpp  node_sched.cpp  versioning_sched.cpp
nanox-mx/src/plugins/throttle/: hysteresis_throttle.cpp
nanox-mx/src/pms/: Makefile.in
nanox-mx/src/support/: Makefile.in  archplugin.cpp  archplugin_decl.hpp  config.hpp  config_decl.hpp  debug.hpp  simpleallocator.cpp  simpleallocator_decl.hpp  smpbaseplugin_decl.hpp
nanox-mx/src/utils/: Makefile.in
nanox-mx/tests/: Makefile.in
nanox-mx/tests/test/05_plugins/worksharing/: worksharing.hpp
